added requirements and added reference for better dictionary navigation

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@
 
 /.vs/Bodell-Lab/FileContentIndex/bd441011-7c25-451d-a514-251b6462da42.vsidx
 /.vs/Bodell-Lab/FileContentIndex/c56be29a-8b2f-48bf-9b11-2ed8879df255.vsidx
+/.vs/Bodell-Lab/FileContentIndex/08d8063c-912f-49d0-8bbc-6d7fb7cce895.vsidx
